# JetBrains-2023-test-tasks

./: README.md
LogFilesSupport/src/main/java/org/example/matching/: Main.java
LogFilesSupport/src/test/java/org/example/matching/: RegexMatcherTest.java
ShareableWorkspaceModel/TreeTransformer/: README.md  build.gradle.kts  settings.gradle.kts
ShareableWorkspaceModel/TreeTransformer/src/main/kotlin/: CliUtils.kt  Main.kt  Tree.kt
ShareableWorkspaceModel/WePaPeLiMa/: README.md  build.gradle.kts  settings.gradle.kts
ShareableWorkspaceModel/WePaPeLiMa/src/main/java/com/example/wepapelima/: WePaPeLiMaApplication.java
ShareableWorkspaceModel/WePaPeLiMa/src/main/java/com/example/wepapelima/controller/: ListController.java
ShareableWorkspaceModel/WePaPeLiMa/src/main/java/com/example/wepapelima/exception/: DeletingElementNotExistsException.java  ListNotExistsException.java
ShareableWorkspaceModel/WePaPeLiMa/src/main/java/com/example/wepapelima/model/: GetVersionsResponse.java  InsertElementRequest.java  ListVersionResponse.java  RemoveElementRequest.java  UpdateElementRequest.java
ShareableWorkspaceModel/WePaPeLiMa/src/main/java/com/example/wepapelima/repository/: ListRepository.java
ShareableWorkspaceModel/WePaPeLiMa/src/main/java/com/example/wepapelima/service/: ListService.java
ShareableWorkspaceModel/WePaPeLiMa/src/test/java/com/example/wepapelima/: WePaPeLiMaApplicationTests.java
TransE/: README.md  config.yml  dataset.py  model.py  pyproject.toml  test.py  train.py  utils.py
TransE/notebooks/: experiment.ipynb
