[tool.poetry]
name = "TransE"
version = "0.1.0"
description = ""
authors = ["Ilia Smirnov"]
readme = "README.md"

[[tool.poetry.source]]
name = "torch-wheels"
url = "https://data.pyg.org/whl/torch-1.12.0+cpu.html"
default = false
secondary = false

[tool.poetry.dependencies]
python = ">=3.7"
pyg-lib = { version = "^0.1.0+pt112cpu", source = "torch-wheels" }
torch = "1.12.0"
torch-scatter = { version = "^2.1.0+pt112cpu", source = "torch-wheels" }
torch-sparse = { version = "^0.6.16+pt112cpu", source = "torch-wheels" }
torch-cluster = { version = "^1.6.0+pt112cpu", source = "torch-wheels" }
torch-spline-conv = { version = "^1.2.1+pt112cpu", source = "torch-wheels" }
torch_geometric = "2.2.0"
omegaconf = "2.3.0"
ml-things = "0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
